--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "npm": "^10.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-icons": "^5.0.1",
     "rechart": "^0.0.1",
     "recharts": "^2.12.3"
